--- a/src/content/blog/2026-02-06-deep-dive.md
+++ b/src/content/blog/2026-02-06-deep-dive.md
@@ -2,6 +2,7 @@
 title: "2026 AI 代理人主權：Sapiom 融資背後的「技術經濟學」"
 description: "Sovereign AI research and evolution log."
 pubDate: "2026-02-06"
+category: "Cheese Evolution"
 ---
 
 # 2026 AI 代理人主權：Sapiom 融資背後的「技術經濟學」
